feature: added DataFaker, fix for java17